<resources>
    <string name="app_name">MickMick</string>
    <string name="splash_sub_title">map pick! me pick!</string>
    <string name="splash_title">미크미크</string>

    <!-- 회원가입 & 로그인 -->
    <string name="register_text">회원가입</string>
    <string name="register_sub_text1">회원가입을 하실</string>
    <string name="register_sub_text2">정보를 확인해주세요</string>
    <string name="register_email_hint">이메일을 입력하세요</string>
    <string name="register_check_text">이메일 형식을 확인해주세요 (aaaa@gmail.com)</string>
    <string name="register_pw_text">비밀번호를 입력하세요</string>
    <string name="register_pw_check">특수문자, 영문, 숫자를 조합한 8~10글자로 설정하세요</string>
    <string name="register_name">이름을 입력하세요</string>
    <string name="register_repw_text">비밀번호를 다시 입력하세요</string>
    <string name="register_repw_check">비밀번호가 일치하지 않습니다</string>
    <string name="register_btn_complete">완료</string>
    <string name="welcome_nextbtn">next_mark</string>
    <string name="welcome_previousbtn">previous_mark</string>
    <string name="login_to_mickmick">미크미크에 로그인하기</string>
    <string name="login_hint_password">비밀번호를 입력하세요</string>
    <string name="login_hint_email">이메일을 입력하세요</string>
    <string name="login_complete_btn">로그인</string>
    <string name="login_go_register_btn">미크미크 회원가입하기</string>
    <string name="register_nickname">닉네임을 입력해주세요</string>
    <string name="register_nickname_checktxt">한글 혹은 영어, 숫자로만 구성된 2~10자리로 설정하세요.</string>
    <string name="register_nickname_check">중복체크</string>

    <!-- main_bottom_menu -->
    <string name="main_nav_todo">TODO</string>
    <string name="main_nav_settings">SETTING</string>
    <string name="main_nav_main">MAIN</string>
    <string name="main_nav_friend">FRIEND</string>
    <string name="main_nav_search">SEARCH</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_rename_txt">유저 정보 변경하기</string>
    <string name="todo_update_hint">투두입력</string>
    <string name="schedule_todo_input">추가할 TODO의 내용을 입력</string>
    <string name="schedule_add_btn">추가하기</string>
    <string name="schedule_title_text">TODO LIST</string>
    <string name="register_passwd_text">비밀번호 설정하기</string>
    <string name="register_userinfo_text">회원 정보 입력하기</string>
    <string name="change_password_txt">비밀번호 변경 전 인증이 필요해요.</string>
    <string name="map_search_edit_text">검색어를 입력하세요</string>
    <string name="friend_search_hint">친구 이름을 검색하세요</string>
    <string name="friend_search_title">친구 검색하기</string>
    <string name="iconchange_title">유저 아이콘 변경하기</string>
    <string name="icon_change_notice2">사용 가능한 아이콘</string>
    <string name="change_passwd_title">비밀번호 변경하기</string>
    <string name="request_text">친구요청</string>
    <string name="rename_email_text">한번 설정한 이메일은 바꿀 수 없어요.</string>
    <string name="rename_info_text">기본 정보 수정</string>
    <string name="rename_input_text">이름을 입력해주세요</string>
    <string name="rename_nickname_hint">닉네임을 변경해주세요</string>
    <string name="change_passwd_hint">비밀번호를 입력하세요</string>
    <string name="change_passwd_btn">다음</string>
    <string name="change_passwd2_title">이메일로 링크가 발송됩니다.</string>
    <string name="change_passwd_email_hint">이메일을 입력하세요</string>
    <string name="change_passwd2_nextbtn">다음</string>
    <string name="icon_img">Character</string>
    <string name="icon_title">기쁜 초록색 미크미크</string>


</resources>