<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/main_nav_main"
        android:enabled="true"
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_baseline_home_24" />

    <item
        android:title="@string/main_nav_friend"
        android:enabled="true"
        android:id="@+id/menu_friends"
        android:icon="@drawable/ic_baseline_people_24" />

    <item
        android:title="@string/main_nav_todo"
        android:enabled="true"
        android:id="@+id/menu_todo"
        android:icon="@drawable/ic_baseline_calendar_month_24" />

    <item
        android:title="@string/main_nav_settings"
        android:enabled="true"
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_baseline_assignment_ind_24" />
</menu>