<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingDefaultResource">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp"
        android:layout_marginStart="35dp"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_sub_text1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="190dp"
        android:layout_marginStart="35dp"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_sub_text2"
        app:layout_constraintTop_toBottomOf="@+id/te"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="35dp"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/registeremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:padding="13dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:paddingStart="20dp"
        android:background="@drawable/border_basic"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="286dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/emailCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_check_text"
        android:textColor="#AA1010"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/registeremail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/registerpasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_pw_text"
        android:padding="13dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:paddingStart="20dp"
        android:background="@drawable/border_basic"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/registeremail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/passwdCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_pw_check"
        android:textColor="#CC3838"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/registerpasswd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <EditText
        android:id="@+id/registerRepeatPasswd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_repw_text"
        android:padding="13dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:paddingStart="20dp"
        android:background="@drawable/border_basic"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerpasswd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="44dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/repeatPasswdCheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_repw_check"
        android:textColor="#CC3838"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/registerRepeatPasswd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp" />

    <Button
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:id="@+id/registercomplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_btn_complete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp" />



</androidx.constraintlayout.widget.ConstraintLayout>