<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/whitegreen"
    tools:ignore="MissingDefaultResource" >

    <TextView
        android:id="@+id/main_logo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_title_text"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="36sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/add_todo_edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/schedule_todo_input"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/main_logo_tv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/add_todo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule_add_btn"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/green"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/main_logo_tv"
        app:layout_constraintStart_toEndOf="@+id/add_todo_edit"
        />as

</androidx.constraintlayout.widget.ConstraintLayout>